사업소개 -> 기술 및 사업

--- a/work1-1.html
+++ b/work1-1.html
@@ -19,7 +19,6 @@
 </head>
 
 <body>
-
   <!-- Navigation(공통) -->
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
@@ -38,7 +37,7 @@
           <li class="nav-item">
             <a class="nav-link" href="business1.html"
               aria-haspopup="true" aria-expanded="true">
-              사업소개</a>
+              기술 및 사업</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="work1.html"
@@ -62,7 +61,7 @@
           </li>
           <li class="nav-sub0">
             <ul>
-              <li><a class="nav-sub-text" href="business1.html">고농도폐수처리설비</a></li>
+              <li><a class="nav-sub-text" href="business1.html">폐수처리설비</a></li>
               <li><a class="nav-sub-text" href="business2.html">위탁운영관리</a></li>
               <li><a class="nav-sub-text" href="business3.html">측정대행</a></li>
               <li><a class="nav-sub-text" href="business4.html">환경컨설팅 및 인허가</a></li>
@@ -86,10 +85,15 @@
           </li>
         </ul>
       </div>
+      <div class="top-util">
+        <ul>
+          <li><a href="index.html">HOME</a></li>
+          <li><a href="contact.html">CONTACT</a></li>
+        </ul>
+      </div>
     </div>
   </nav>
 
-  
   <!-- Wrap -->
   <div class="wrap">
     <!-- top img -->
@@ -100,44 +104,46 @@
         <p>쾌적하고 맑은 환경을 위하여, 주흥환경이 앞장서겠습니다.</p>
       </div>
     </div>
+
     <div class="row main-content">
       <!-- Sidebar Column -->
-      <div class="col-lg-2 mb-4">
+      <div class="side-bar col-lg-2 mb-4">
         <a href="work1.html" class="side-menu text-center">사업실적</a>
         <div class="list-group">
-          <a href="work1.html" class="list-group-item">수처리공사</a>
+          <a href="work1.html" class="list-group-item"><strong>수처리공사</strong></a>
           <a href="work2.html" class="list-group-item">시운전</a>
           <a href="work3.html" class="list-group-item">기술개발</a>
         </div>
-      </div>
-  
-      <!-- Page Content -->
-      <div class="container">
-  
-        <!-- Page Heading/Breadcrumbs -->
-        <h1 id="sub-menu">수처리공사</h1>
-  
+      </div>  
+    <!-- Page Content -->
+    <div class="container">
+      <!-- Page Heading/Breadcrumbs -->
+
+      <div class="title-bar">
+        <h1>수처리공사실적</h1>
+
         <ol class="breadcrumb">
           <li class="breadcrumb-item">
             <a href="index.html">Home</a>
           </li>
-          <li class="breadcrumb-item"><a href="work1.html">사업실적</a></li>
-          <li class="breadcrumb-item"><a href="work1.html">수처리공사</a></li>
+          <li class="breadcrumb-item"><a href="./work1.html">사업실적</a></li>
+          <li class="breadcrumb-item"><a href="./work1.html">수처리공사</a></li>
         </ol>
+      </div>
+
         <div class="sub-menu-btn col2">
           <a href="work1.html"><div><p>2017년 이후</p></div></a>
           <a href="work1-1.html"><div class="active"><p>2017년 이전</p></div></a>
         </div>
-
         <div class="work-list">
           <table class="work-tb">
             <thead>
               <tr>
                 <th>기간</th>
-                <th>발주처</th>
-                <th>계약명</th>
-                <th>공법</th>
-                <th>처리용량(㎥/d)</th>
+                <th width="160">발주처</th>
+                <th width="430">계약명</th>
+                <th width="250">공법</th>
+                <th width="120">처리용량<span class="small">(㎥/d)</span></th>
               </tr>
             </thead>
             <tbody>
@@ -172,7 +178,7 @@
               <tr>
                 <td>2016.10.01~2017.03.31</td>
                 <td>미래이엔지</td>
-                <td>P-PJT 옥상일반배관(북,서/남/GCS 동)/PEM+PVC배관공사</td>
+                <td>P-PJT 옥상일반배관(북,서/남/GCS 동), PEM+PVC배관공사</td>
                 <td>-</td>
                 <td>-</td>
               </tr>
@@ -223,7 +229,7 @@
                 <td>(주)산성앨엔에스</td>
                 <td>리더스코스케틱 안성 CGMP 설비공사 중 폐수처리시설공사</td>
                 <td>VMBDR+MBR</td>
-                <td></td>
+                <td>-</td>
               </tr>
               <tr>
                 <td>2015.07.28~2016.03.31</td>
@@ -320,7 +326,7 @@
                 <td>2013.12.06~2014.12.03</td>
                 <td>제6955부대</td>
                 <td>70포병대대 폐수처리시설 설치공사</td>
-                <td>수중미세기포발생장치와 산화성가스를 이용한 폐수처리장치</td>
+                <td>수중미세기포발생장치와<br>산화성가스를 이용한 폐수처리장치</td>
                 <td>8</td>
               </tr>
               <tr>
@@ -335,14 +341,14 @@
                 <td>㈜청녹엔텍</td>
                 <td>세광정신요양원 개인하수처리시설 설치공사 중 설비공사</td>
                 <td>MBR</td>
-                <td></td>
+                <td>-</td>
               </tr>
               <tr>
                 <td>2013.08.27~2013.10.31</td>
                 <td>㈜에코포인트</td>
                 <td>엑소후레쉬물류㈜ 비점오염원 저감시설 설치공사</td>
                 <td>물리적처리</td>
-                <td></td>
+                <td>-</td>
               </tr>
               <tr>
                 <td>2013.07.30~2013.11.30</td>
@@ -489,26 +495,16 @@
                 <td>국가보훈처 88골프장</td>
                 <td>오수고도처리시설</td>
                 <td>MBR</td>
-                <td>350 ? 1EA</td>
+                <td>350 ? 1EA<br>20 ? 2EA</td>
               </tr>
               <tr>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td></td>
-                <td>20 ? 2EA</td>
-              </tr>
-              <tr>
-                <td>2011.04.01~2011.10.15</td>
-                <td>㈜파인리조트</td>
-                <td>양지파인리조트 오수처리시설 개선공사</td>
+                <td rowspan="2">2011.04.01~2011.10.15</td>
+                <td rowspan="2">㈜파인리조트</td>
+                <td rowspan="2">양지파인리조트 오수처리시설 개선공사</td>
                 <td>접촉산화 + PCF</td>
                 <td>1,000</td>
               </tr>
               <tr>
-                <td></td>
-                <td></td>
-                <td></td>
                 <td>MBR</td>
                 <td>1,500</td>
               </tr>
@@ -529,6 +525,7 @@
             </tbody>
             </table>
         </div>
+  
   
       </div>
       <!-- /.container -->
