--- a/work1.html
+++ b/work1.html
@@ -37,7 +37,7 @@
           <li class="nav-item">
             <a class="nav-link" href="business1.html"
               aria-haspopup="true" aria-expanded="true">
-              사업소개</a>
+              기술 및 사업</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="work1.html"
@@ -141,10 +141,10 @@
             <thead>
               <tr>
                 <th>기간</th>
-                <th>발주처</th>
-                <th>계약명</th>
-                <th>공법</th>
-                <th>처리용량(㎥/d)</th>
+                <th width="160">발주처</th>
+                <th width="430">계약명</th>
+                <th width="250">공법</th>
+                <th width="120">처리용량<span class="small">(㎥/d)</span></th>
               </tr>
             </thead>
             <tbody>
@@ -219,7 +219,7 @@
                 <td>40</td>
               </tr>
               <tr>
-                <td>2019.02.20(착공일로부터~60일)</td>
+                <td>2019.02.20 (착공일로부터~60일)</td>
                 <td>의료법인 효심의료재단</td>
                 <td>폐수처리시설 보수공사</td>
                 <td>물리화학적처리+MBR</td>
@@ -233,7 +233,7 @@
                 <td>-</td>
               </tr>
               <tr>
-                <td>2018.05.08~착공후 60일이내</td>
+                <td>2018.05.08 (착공일로부터~60일)</td>
                 <td>㈜안성종로기숙학원</td>
                 <td>오수처리시설 분리막 교체 공사 계약서</td>
                 <td>MBR</td>
