--- a/business1.html
+++ b/business1.html
@@ -40,7 +40,7 @@
           <li class="nav-item">
             <a class="nav-link" href="business1.html"
               aria-haspopup="true" aria-expanded="true">
-              사업소개</a>
+              기술 및 사업</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="work1.html"
@@ -110,7 +110,7 @@
     <div class="row main-content">
       <!-- Sidebar Column -->
       <div class="col-lg-2 mb-4">
-        <a href="business1.html" class="side-menu text-center">사업소개</a>
+        <a href="business1.html" class="side-menu text-center">기술 및 사업</a>
         <div class="list-group">
           <a href="business1.html" class="list-group-item"><strong>폐수처리설비</strong></a>
           <a href="business2.html" class="list-group-item">위탁운영관리</a>
@@ -130,7 +130,7 @@
           <li class="breadcrumb-item">
             <a href="index.html">Home</a>
           </li>
-          <li class="breadcrumb-item"><a href="./business1.html">사업소개</a></li>
+          <li class="breadcrumb-item"><a href="./business1.html">기술 및 사업</a></li>
           <li class="breadcrumb-item"><a href="./business1.html">폐수처리설비</a></li>
         </ol>
         </div>
@@ -174,7 +174,37 @@
         <h3 class="sub-tit">
           VMBD 설치 사례
         </h3>
-        <img class="my-4" src="img/VMBD실제.JPG" width=70%>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="img/vMBD설치1.png" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/VMBD설치2.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/VMBD설치3.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/현장사진2.png" alt="Forth slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+        
         <h3 class="sub-tit">
           처리공정
         </h3>
