--- a/business4.html
+++ b/business4.html
@@ -39,7 +39,7 @@
           <li class="nav-item">
             <a class="nav-link" href="business1.html"
               aria-haspopup="true" aria-expanded="true">
-              사업소개</a>
+              기술 및 사업</a>
           </li>
           <li class="nav-item">
             <a class="nav-link" href="work1.html"
@@ -109,7 +109,7 @@
     <div class="row main-content">
       <!-- Sidebar Column -->
       <div class="col-lg-2 mb-4">
-        <a href="business1.html" class="side-menu text-center">사업소개</a>
+        <a href="business1.html" class="side-menu text-center">기술 및 사업</a>
         <div class="list-group">
           <a href="business1.html" class="list-group-item">폐수처리설비</a>
           <a href="business2.html" class="list-group-item">위탁운영관리</a>
@@ -129,7 +129,7 @@
           <li class="breadcrumb-item">
             <a href="index.html">Home</a>
           </li>
-          <li class="breadcrumb-item"><a href="./business1.html">사업소개</a></li>
+          <li class="breadcrumb-item"><a href="./business1.html">기술 및 사업</a></li>
           <li class="breadcrumb-item"><a href="./business2.html">환경컨설팅 및 인허가</a></li>
         </ol>
         </div>
