business1 content layout changed

--- a/index.html
+++ b/index.html
@@ -108,9 +108,8 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
-        <div class="carousel-item active" style="background-image: url('img/panorama-2117310.jpg')">
+        <div class="carousel-item active" style="background-image: url('img/KakaoTalk_20200916_160628437.jpg">
           <div class="carousel-caption d-none d-md-block">
-            <h3>깨끗하고 맑은 환경을 위하여</h3>
           </div>
         </div>
       </div>
