--- a/business1.html
+++ b/business1.html
@@ -148,8 +148,11 @@
         <h3 class="sub-tit">
           VMBD 공법의 원리
         </h3>
-        <img src="img/VMBD1.png" width=90%>
-        <img class="my-4" src="img/VMBD2.png" width=90%>
+        <div class="row">
+          <img src="img/VMBD원리1.jpg" width=55%>
+          <img src="img/VMBD원리2.jpg" width=40%>
+        </div>
+
         <h3 class="sub-tit">
           기존 폭기시스템과의 비교
         </h3>
@@ -183,7 +186,7 @@
           </ol>
           <div class="carousel-inner">
             <div class="carousel-item active">
-              <img class="d-block w-100" src="img/vMBD설치1.png" alt="First slide">
+              <img class="d-block w-100" src="img/VMBD설치1.png" alt="First slide">
             </div>
             <div class="carousel-item">
               <img class="d-block w-100" src="img/VMBD설치2.jpg" alt="Second slide">
@@ -206,14 +209,9 @@
         </div>
         
         <h3 class="sub-tit">
-          처리공정
+          관련 특허증
         </h3>
-        <h4>고농도 유기물 제거 공정도</h4>
-        <img src="img/공정도1.png" width=100%>
-        <h4>고농도 T-N 제거 공정도</h4>
-        <img src="img/공정도2.png" width=100%>
-        <h4>순환식 산화 탈취시스템 공정도</h4>
-        <img src="img/공정도3.png" width=100%>
+
       </div>
       </div>
       <!-- /.container -->
