--- a/business2.html
+++ b/business2.html
@@ -142,7 +142,7 @@
         <h3 class="sub-tit">
           관리용역 업무 처리
         </h3>
-        <img src="img/bus2-1.png" width=100%>
+        <img class="my-4" src="img/위탁운영.jpg" width=80%>
       </div>
       </div>
       <!-- /.container -->
