--- a/business1.html
+++ b/business1.html
@@ -211,10 +211,9 @@
         <h3 class="sub-tit">
           관련 특허증
         </h3>
-        <div class="col-lg-4 col-sm-5 mb-4">
-          <div class="certi">
-          <img class="img-fluid" src="certification2/특허증 - 산소용해장치(제10-1579557호)-1.jpg" alt="">
-          <div class="certi-name">산소용해장치</div>
+        <div class="row">
+          <img class="img-fluid mx-5" src="certification2/특허증 - 산소용해장치(제10-1579557호)-1.jpg" alt="" width=30%>
+          <div class="certi-name">특허 제10-1579557호 <br> 산소용해장치(VMBD) </div>
         </div>
 
       </div>
