business side bar changed

--- a/business1.html
+++ b/business1.html
@@ -112,7 +112,9 @@
       <div class="col-lg-2 mb-4">
         <a href="business1.html" class="side-menu text-center">기술 및 사업</a>
         <div class="list-group">
+          <a href="business1.html" class="list-group-header">기술소개</a>
           <a href="business1.html" class="list-group-item"><strong>폐수처리설비</strong></a>
+          <a href="business1.html" class="list-group-header">사업소개</a>
           <a href="business2.html" class="list-group-item">위탁운영관리</a>
           <a href="business3.html" class="list-group-item">측정대행</a>
           <a href="business4.html" class="list-group-item">환경컨설팅 및 인허가</a>
@@ -137,8 +139,16 @@
         
         <div class="business-intro" >
           <p>가축분뇨처리시설, 폐수처리시설, 오수, 분뇨처리시설, 하수처리시설, 정수처리시설 등을 설계하고 시공하는 사업분야입니다.<br>
-            <!--가축분뇨,폐수처리 등에는 산소용해장치(VMBD)를 활용하여 설비를 구성합니다. --></p>
+          </p>
        </div>
+       <div class="sub-menu-btn col4">
+        <a href="business3.html"><div class="active"><p>VMBD 공법</p></div></a>
+        <a href="business3-1.html"><div><p>고농도 유기물 제거 기술</p></div></a>
+        <a href="business3-2.html"><div><p>고농도 T-N 제거 기술</p></div></a>
+        <a href="business3-2.html"><div><p>순환식 산화 탈취 시스템</p></div></a>
+      </div>
+
+
        <div class="business-content">
         <h3 class="sub-tit">
           고농도폐수처리공법 - VMBD(Vortical Micro Bubble Diffuser) 공법
