--- a/index.html
+++ b/index.html
@@ -108,7 +108,7 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
-        <div class="carousel-item active" style="background-image: url('img/KakaoTalk_20200916_160628437.jpg">
+        <div class="carousel-item active" style="background-image: url('img/20200929_155648_0001.png')">
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
