--- a/business5.html
+++ b/business5.html
@@ -16,9 +16,9 @@
   <!-- Custom styles for this template -->
   <link href="css/modern-business.css" rel="stylesheet">
 
+
   <!-- Font -->
   <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
-
 </head>
 
 <body>
@@ -112,8 +112,8 @@
       <div class="col-lg-2 mb-4">
         <a href="business1.html" class="side-menu text-center">사업소개</a>
         <div class="list-group">
-          <a href="business1.html" class="list-group-item"><strong>폐수처리설비</strong></a>
-          <a href="business2.html" class="list-group-item">위탁운영관리</a>
+          <a href="business1.html" class="list-group-item">폐수처리설비</a>
+          <a href="business2.html" class="list-group-item"><strong>위탁운영관리</strong></a>
           <a href="business3.html" class="list-group-item">측정대행</a>
           <a href="business4.html" class="list-group-item">환경컨설팅 및 인허가</a>
         </div>
@@ -124,65 +124,25 @@
   
         <!-- Page Heading/Breadcrumbs -->
         <div class="title-bar">
-        <h1>폐수처리설비</h1>
+        <h1>위탁운영관리</h1>
 
         <ol class="breadcrumb">
           <li class="breadcrumb-item">
             <a href="index.html">Home</a>
           </li>
           <li class="breadcrumb-item"><a href="./business1.html">사업소개</a></li>
-          <li class="breadcrumb-item"><a href="./business1.html">폐수처리설비</a></li>
+          <li class="breadcrumb-item"><a href="./business2.html">위탁운영관리</a></li>
         </ol>
         </div>
         
         <div class="business-intro" >
-          <p>가축분뇨/폐수처리시설, 오수/분뇨처리시설, 하수/정수처리시설 등의 설계 및 시공 사업분야입니다.</p>
+          <p>개인하수처리시설, 산업폐수처리시설, 정수처리시설 등의 위탁관리용역 사업분야입니다.</p>
        </div>
        <div class="business-content">
         <h3 class="sub-tit">
-          고농도폐수처리공법 - VMBD(Vortical Micro Bubble Diffuser) 공법
+          관리용역 업무 처리
         </h3>
-        <p class="bg-grey"><strong>산소용해장치(VMBD)</strong>는 생물반응조 유체를 순환시키며 직접 공기를 
-          접촉 용해시키는 특수 구조 노즐의 미세기포 발생장치를 이용한 공법이다.</p>
-        <h3 class="sub-tit">
-          VMBD 공법의 원리
-        </h3>
-        <img src="img/VMBD1.png" width=90%>
-        <img class="my-4" src="img/VMBD2-1.png" width=90%>
-        <h3 class="sub-tit">
-          기존 폭기시스템과의 비교
-        </h3>
-        <div class="row list">
-          <dl>
-            <dt>산소용해도</dt>
-            <dd>25% ~ 35% <br> (기존 방식의 3~5배)</dd>
-          </dl>
-          <dl>
-            <dt>소요부지면적</dt>
-            <dd>기존 폭기조의 <br>5~10배 감소</dd>
-          </dl>
-          <dl>
-            <dt>유지관리</dt>
-            <dd>자동 청소, 반영구적 수명</dd>
-          </dl>
-          <dl>
-            <dt>처리효율</dt>
-            <dd>BOD 제거율, 질산화율<br>95% 이상</dd>
-          </dl>
-        </div>
-        <h3 class="sub-tit">
-          VMBD 설치 사례
-        </h3>
-        <img class="my-4" src="img/VMBD실제.JPG" width=70%>
-        <h3 class="sub-tit">
-          처리공정
-        </h3>
-        <h4>고농도 유기물 제거 공정도</h4>
-        <img src="img/공정도1.png" width=100%>
-        <h4>고농도 T-N 제거 공정도</h4>
-        <img src="img/공정도2.png" width=100%>
-        <h4>순환식 산화 탈취시스템 공정도</h4>
-        <img src="img/공정도3.png" width=100%>
+        <img src="img/bus2-1.png" width=100%>
       </div>
       </div>
       <!-- /.container -->
