--- a/business1.html
+++ b/business1.html
@@ -114,8 +114,9 @@
         <div class="list-group">
           <a href="business1.html" class="list-group-header">기술소개</a>
           <a href="business1.html" class="list-group-item"><strong>폐수처리설비</strong></a>
-          <a href="business1.html" class="list-group-header">사업소개</a>
-          <a href="business2.html" class="list-group-item">위탁운영관리</a>
+          <a href="business2.html" class="list-group-item">부상분리기술</a>
+          <a href="business3.html" class="list-group-header">사업소개</a>
+          <a href="business5.html" class="list-group-item">위탁운영관리</a>
           <a href="business3.html" class="list-group-item">측정대행</a>
           <a href="business4.html" class="list-group-item">환경컨설팅 및 인허가</a>
         </div>
