business2 - DAF layout

--- a/business2.html
+++ b/business2.html
@@ -113,9 +113,9 @@
         <a href="business1.html" class="side-menu text-center">기술 및 사업</a>
         <div class="list-group">
           <a href="business1.html" class="list-group-header">기술소개</a>
-          <a href="business1.html" class="list-group-item"><strong>폐수처리설비</strong></a>
-          <a href="business2.html" class="list-group-item">부상분리기술</a>
-          <a href="business3.html" class="list-group-header">사업소개</a>
+          <a href="business1.html" class="list-group-item">폐수처리설비</a>
+          <a href="business2.html" class="list-group-item"><strong>부상분리기술</strong></a>
+          <a href="business5.html" class="list-group-header">사업소개</a>
           <a href="business5.html" class="list-group-item">위탁운영관리</a>
           <a href="business3.html" class="list-group-item">측정대행</a>
           <a href="business4.html" class="list-group-item">환경컨설팅 및 인허가</a>
@@ -127,14 +127,14 @@
   
         <!-- Page Heading/Breadcrumbs -->
         <div class="title-bar">
-        <h1>폐수처리설비</h1>
+        <h1>부상분리기술(DAF)</h1>
 
         <ol class="breadcrumb">
           <li class="breadcrumb-item">
             <a href="index.html">Home</a>
           </li>
           <li class="breadcrumb-item"><a href="./business1.html">기술 및 사업</a></li>
-          <li class="breadcrumb-item"><a href="./business1.html">폐수처리설비</a></li>
+          <li class="breadcrumb-item"><a href="./business2.html">부상분리기술</a></li>
         </ol>
         </div>
         
@@ -142,51 +142,15 @@
           <p>가축분뇨처리시설, 폐수처리시설, 오수, 분뇨처리시설, 하수처리시설, 정수처리시설 등을 설계하고 시공하는 사업분야입니다.<br>
           </p>
        </div>
-       <div class="sub-menu-btn col4">
-        <a href="business3.html"><div class="active"><p>VMBD 공법</p></div></a>
-        <a href="business3-1.html"><div><p>고농도 유기물 제거 기술</p></div></a>
-        <a href="business3-2.html"><div><p>고농도 T-N 제거 기술</p></div></a>
-        <a href="business3-2.html"><div><p>순환식 산화 탈취 시스템</p></div></a>
-      </div>
-
 
        <div class="business-content">
         <h3 class="sub-tit">
-          고농도폐수처리공법 - VMBD(Vortical Micro Bubble Diffuser) 공법
+          부상분리기술 공정도
         </h3>
-        <p class="bg-grey"><strong>산소용해장치(VMBD)</strong>는 생물반응조 유체를 순환시키며 직접 공기를 
-          접촉 용해시키는 특수 구조 노즐의 미세기포 발생장치를 이용한 공법이다.</p>
+        <img src="img/4.가압부상 시스템 공정도.jpg" width=80%>
+       
         <h3 class="sub-tit">
-          VMBD 공법의 원리
-        </h3>
-        <div class="row">
-          <img src="img/VMBD원리1.jpg" width=55%>
-          <img src="img/VMBD원리2.jpg" width=40%>
-        </div>
-
-        <h3 class="sub-tit">
-          기존 폭기시스템과의 비교
-        </h3>
-        <div class="row list">
-          <dl>
-            <dt>산소용해도</dt>
-            <dd>25% ~ 35% <br> (기존 방식의 3~5배)</dd>
-          </dl>
-          <dl>
-            <dt>소요부지면적</dt>
-            <dd>기존 폭기조의 <br>5~10배 감소</dd>
-          </dl>
-          <dl>
-            <dt>유지관리</dt>
-            <dd>자동 청소, 반영구적 수명</dd>
-          </dl>
-          <dl>
-            <dt>처리효율</dt>
-            <dd>BOD 제거율, 질산화율<br>95% 이상</dd>
-          </dl>
-        </div>
-        <h3 class="sub-tit">
-          VMBD 설치 사례
+          부상분리기술 적용 사례
         </h3>
         <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
           <ol class="carousel-indicators">
@@ -223,8 +187,9 @@
           관련 특허증
         </h3>
         <div class="row">
-          <img class="img-fluid mx-5" src="certification2/특허증 - 산소용해장치(제10-1579557호)-1.jpg" alt="" width=30%>
-          <div class="certi-name">특허 제10-1579557호 <br> 산소용해장치(VMBD) </div>
+          <img class="img-fluid mx-3" src="certification2/특허증 - 스컴 및 부유물질 제거장치 및 스컴 및 부유물질 제거방법-1.jpg" alt="" width=30%>
+          <img class="img-fluid mx-3" src="certification2/특허증 - 플로우형 스컴 및 부유물질 제거장치, 플로우트형 스컴 및 부유물질 처리장치 및 이를 이용한 저수지의 수질 정화시스템-1.jpg" alt="" width=30%>
+          <img class="img-fluid mx-3" src="certification2/특허증 - 배오존을 이용한 부상분리와 무포기 오존 반응기를 이용한 수 처리장치-1.jpg" alt="" width=30%>
         </div>
 
       </div>
