--- a/business1-1.html
+++ b/business1-1.html
@@ -17,7 +17,8 @@
   <link href="css/modern-business.css" rel="stylesheet">
 
   <!-- Font -->
-  <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&family=Audiowide&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Black+Han+Sans&display=swap" rel="stylesheet">
+
 </head>
 
 <body>
@@ -107,74 +108,126 @@
       </div>
     </div>
     <div class="row main-content">
-       <!-- Sidebar Column -->
-       <div class="col-lg-2 mb-4">
+      <!-- Sidebar Column -->
+      <div class="col-lg-2 mb-4">
         <a href="business1.html" class="side-menu text-center">기술 및 사업</a>
         <div class="list-group">
           <a href="business1.html" class="list-group-header">기술소개</a>
-          <a href="business1.html" class="list-group-item">폐수처리설비</a>
+          <a href="business1.html" class="list-group-item"><strong>폐수처리설비</strong></a>
           <a href="business2.html" class="list-group-item">부상분리기술</a>
           <a href="business3.html" class="list-group-header">사업소개</a>
           <a href="business5.html" class="list-group-item">위탁운영관리</a>
           <a href="business3.html" class="list-group-item">측정대행</a>
-          <a href="business4.html" class="list-group-item"><strong>환경컨설팅 및 인허가</strong></a>
+          <a href="business4.html" class="list-group-item">환경컨설팅 및 인허가</a>
         </div>
       </div>
   
       <!-- Page Content -->
-      <div class="container">
+      <div class="container" id="business">
   
         <!-- Page Heading/Breadcrumbs -->
         <div class="title-bar">
-        <h1>환경컨설팅 및 인허가</h1>
+        <h1>폐수처리설비</h1>
 
         <ol class="breadcrumb">
           <li class="breadcrumb-item">
             <a href="index.html">Home</a>
           </li>
           <li class="breadcrumb-item"><a href="./business1.html">기술 및 사업</a></li>
-          <li class="breadcrumb-item"><a href="./business2.html">환경컨설팅 및 인허가</a></li>
+          <li class="breadcrumb-item"><a href="./business1.html">폐수처리설비</a></li>
         </ol>
         </div>
+        
         <div class="business-intro" >
-          <p>국가과제, 산학공동연구 등의 연구개발과 환경설비의 개선/관리 사업분야 입니다.</p>
+          <p>가축분뇨처리시설, 폐수처리시설, 오수, 분뇨처리시설, 하수처리시설, 정수처리시설 등을 설계하고 시공하는 사업분야입니다.<br>
+          </p>
        </div>
+       <div class="sub-menu-btn col4">
+        <a href="business1.html"><div><p>VMBD 공법</p></div></a>
+        <a href="business1-1.html"><div class="active"><p>고농도 유기물 제거 기술</p></div></a>
+        <a href="business1-2.html"><div><p>고농도 T-N 제거 기술</p></div></a>
+        <a href="business1-3.html"><div><p>순환식 산화 탈취 시스템</p></div></a>
+      </div>
+
+
        <div class="business-content">
         <h3 class="sub-tit">
-          환경컨설팅
+          고농도폐수처리공법 - VMBD(Vortical Micro Bubble Diffuser) 공법
         </h3>
-        <p class="bg-grey">
-          하·폐수, 대기 및 폐기물 등 환경 관련 시설에 대한
-          문제점을 최소의 비용으로 최대의 효과를 달성할 수 있는 대안 및 해결 방안 등을 체계적으로 제시한다.
-        </p>
+        <p class="bg-grey"><strong>산소용해장치(VMBD)</strong>는 생물반응조 유체를 순환시키며 직접 공기를 
+          접촉 용해시키는 특수 구조 노즐의 미세기포 발생장치를 이용한 공법이다.</p>
         <h3 class="sub-tit">
-          환경컨설팅 사업범위
+          VMBD 공법의 원리
         </h3>
-        <p class="bg-grey">
-          1. 환경오염물질 방지시설 개선 운영에 관한 기술지원<br>
-          2. 기업체의 환경오염관리 매뉴얼 지원<br>
-          3. 배출시설의 공정개선 및 관리 효율성 지원<br>
-          4. 환경기술 인력의 업무 능력향상 교육 지원<br>
-          5. 인허가 제도 및 융자제도 및 환경산업동향/정부정책 정보제공<br>
-        </p>
-        <h3 class="sub-tit">
-          업무진행 절차
-        </h3>
-        <div id="bus4">
-          <ul class="circle-list">
-            <li>상담 및 접수</li>
-            <li>현장조사</li>
-            <li>계약진단 수행</li>
-            <li>개선방안 제시</li>
-          </ul>
+        <div class="row">
+          <img src="img/VMBD원리1.jpg" width=55%>
+          <img src="img/VMBD원리2.jpg" width=40%>
         </div>
 
         <h3 class="sub-tit">
-          연구개발 수행 현황
+          기존 폭기시스템과의 비교
         </h3>
-        <img src="img/lab.png" width=80%>
+        <div class="row list">
+          <dl>
+            <dt>산소용해도</dt>
+            <dd>25% ~ 35% <br> (기존 방식의 3~5배)</dd>
+          </dl>
+          <dl>
+            <dt>소요부지면적</dt>
+            <dd>기존 폭기조의 <br>5~10배 감소</dd>
+          </dl>
+          <dl>
+            <dt>유지관리</dt>
+            <dd>자동 청소, 반영구적 수명</dd>
+          </dl>
+          <dl>
+            <dt>처리효율</dt>
+            <dd>BOD 제거율, 질산화율<br>95% 이상</dd>
+          </dl>
+        </div>
+        <h3 class="sub-tit">
+          VMBD 설치 사례
+        </h3>
+        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
+          <ol class="carousel-indicators">
+            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
+            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
+          </ol>
+          <div class="carousel-inner">
+            <div class="carousel-item active">
+              <img class="d-block w-100" src="img/VMBD설치1.png" alt="First slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/VMBD설치2.jpg" alt="Second slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/VMBD설치3.jpg" alt="Third slide">
+            </div>
+            <div class="carousel-item">
+              <img class="d-block w-100" src="img/현장사진2.png" alt="Forth slide">
+            </div>
+          </div>
+          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
+            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+            <span class="sr-only">Previous</span>
+          </a>
+          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
+            <span class="carousel-control-next-icon" aria-hidden="true"></span>
+            <span class="sr-only">Next</span>
+          </a>
+        </div>
+        
+        <h3 class="sub-tit">
+          관련 특허증
+        </h3>
+        <div class="row">
+          <img class="img-fluid mx-5" src="certification2/특허증 - 산소용해장치(제10-1579557호)-1.jpg" alt="" width=30%>
+          <div class="certi-name">특허 제10-1579557호 <br> 산소용해장치(VMBD) </div>
+        </div>
+
       </div>
-      <!-- ./business-content -->
       </div>
       <!-- /.container -->
     </div>
