--- a/business1-1.html
+++ b/business1-1.html
@@ -152,81 +152,10 @@
 
        <div class="business-content">
         <h3 class="sub-tit">
-          고농도폐수처리공법 - VMBD(Vortical Micro Bubble Diffuser) 공법
+          고농도 유기물 제거 기술 공정도
         </h3>
-        <p class="bg-grey"><strong>산소용해장치(VMBD)</strong>는 생물반응조 유체를 순환시키며 직접 공기를 
-          접촉 용해시키는 특수 구조 노즐의 미세기포 발생장치를 이용한 공법이다.</p>
-        <h3 class="sub-tit">
-          VMBD 공법의 원리
-        </h3>
-        <div class="row">
-          <img src="img/VMBD원리1.jpg" width=55%>
-          <img src="img/VMBD원리2.jpg" width=40%>
-        </div>
-
-        <h3 class="sub-tit">
-          기존 폭기시스템과의 비교
-        </h3>
-        <div class="row list">
-          <dl>
-            <dt>산소용해도</dt>
-            <dd>25% ~ 35% <br> (기존 방식의 3~5배)</dd>
-          </dl>
-          <dl>
-            <dt>소요부지면적</dt>
-            <dd>기존 폭기조의 <br>5~10배 감소</dd>
-          </dl>
-          <dl>
-            <dt>유지관리</dt>
-            <dd>자동 청소, 반영구적 수명</dd>
-          </dl>
-          <dl>
-            <dt>처리효율</dt>
-            <dd>BOD 제거율, 질산화율<br>95% 이상</dd>
-          </dl>
-        </div>
-        <h3 class="sub-tit">
-          VMBD 설치 사례
-        </h3>
-        <div id="carouselExampleIndicators" class="carousel slide" data-ride="carousel">
-          <ol class="carousel-indicators">
-            <li data-target="#carouselExampleIndicators" data-slide-to="0" class="active"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="1"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="2"></li>
-            <li data-target="#carouselExampleIndicators" data-slide-to="3"></li>
-          </ol>
-          <div class="carousel-inner">
-            <div class="carousel-item active">
-              <img class="d-block w-100" src="img/VMBD설치1.png" alt="First slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="img/VMBD설치2.jpg" alt="Second slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="img/VMBD설치3.jpg" alt="Third slide">
-            </div>
-            <div class="carousel-item">
-              <img class="d-block w-100" src="img/현장사진2.png" alt="Forth slide">
-            </div>
-          </div>
-          <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-            <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-            <span class="sr-only">Previous</span>
-          </a>
-          <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-            <span class="carousel-control-next-icon" aria-hidden="true"></span>
-            <span class="sr-only">Next</span>
-          </a>
-        </div>
+        <img src="img/2.고농도 유기물 제거 공정도.jpg" width=80%>
         
-        <h3 class="sub-tit">
-          관련 특허증
-        </h3>
-        <div class="row">
-          <img class="img-fluid mx-5" src="certification2/특허증 - 산소용해장치(제10-1579557호)-1.jpg" alt="" width=30%>
-          <div class="certi-name">특허 제10-1579557호 <br> 산소용해장치(VMBD) </div>
-        </div>
-
       </div>
       </div>
       <!-- /.container -->
