main design done

--- a/contact.html
+++ b/contact.html
@@ -163,7 +163,7 @@
           <div class="control-group form-group">
             <div class="controls">
               <label>제목 :</label>
-              <input type="text" class="form-control" id="phone" required data-validation-required-message="제목을 입력해주세요.">
+              <input type="text" class="form-control" id="title" required data-validation-required-message="제목을 입력해주세요.">
               <p class="help-block"></p>
             </div>
           </div>
