--- a/index.html
+++ b/index.html
@@ -108,39 +108,36 @@
       </ol>
       <div class="carousel-inner" role="listbox">
         <!-- Slide One - Set the background image for this slide in the line below -->
-        <div class="carousel-item active" style="background-image: url('img/20200929_155648_0001.png')">
+        <div class="carousel-item active" >
+          <video muted autoplay loop>
+            <source src="img/video0.mp4" type="video/mp4">
+            <strong>Your browser does not support the video tag.</strong>
+          </video>
           <div class="carousel-caption d-none d-md-block">
           </div>
         </div>
       </div>
-      <a class="carousel-control-prev" href="#carouselExampleIndicators" role="button" data-slide="prev">
-        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-      </a>
-      <a class="carousel-control-next" href="#carouselExampleIndicators" role="button" data-slide="next">
-        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-      </a>
     </div>
   </header>
-  <div class="background-custom" style= "background-image: url('img/4.png')"></div>
+  <div class="background-custom"></div>
   <!-- Page Content -->
   <div class="main-business container">
     <!-- Portfolio Section -->
     <h2>Business</h2>
     <h3>주흥환경이 여러분들의 맑은 세상을 책임지겠습니다.</h3>
     <div class="portfolio mb-5 row">
+
       <div class="col-lg col-sm-6 portfolio-item" style=" cursor: pointer;" onclick="location.href='business1.html';">
         <div class="card h-100">
           <div class="card-bg"></div>
           <div class="card-head">
             <div class="card-img" style="background-image: url('img/splashing-165192.jpg')"></div>
         </div>
-          <div class="card-body" >
+          <div class="card-body">
             <h4 class="card-title">
               폐수처리설비
             </h4>
-            <p class="card-text">가축분뇨/폐수처리시설, 오수/분뇨처리시설, 하수/정수처리시설<br> 설계 및 시공</p>
+            <p class="card-text">가축분뇨처리시설, 하수처리시설, 정수처리시설 설계 및 시공</p>
           </div>
         </div>
       </div>
