--- a/business3-2.html
+++ b/business3-2.html
@@ -26,29 +26,29 @@
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
     <div class="container">
       <a class="navbar-brand" href="index.html"><img src="img/logo.png" width=250px></a>
-      <button class="navbar-toggler navbar-toggler-right" type="button" data-toggle="collapse"
-        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="true"
+      <button class="navbar-toggler navbar-toggler-right collapsed" type="button" data-toggle="collapse"
+        data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false"
         aria-label="Toggle navigation">
         <span class="navbar-toggler-icon"></span>
       </button>
-      <div class="collapse navbar-collapse container" id="navbarResponsive">
+      <div class="navbar-collapse collapse" id="navbarResponsive">
         <ul class="navbar-nav">
           <li class="nav-item">
-            <a class="nav-link" href="greet.html">
+            <a class="nav-link" href="greet.html" aria-haspopup="true">
               회사소개 </a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="business1.html"
-              aria-haspopup="true" aria-expanded="true">
+            <a class="nav-link" href="business1.html" aria-haspopup="true" aria-expanded="false">
               기술 및 사업</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="work1.html"
-              aria-haspopup="true" aria-expanded="true">
+            <a class="nav-link" href="work1.html" 
+              aria-haspopup="true" aria-expanded="false">
               사업실적</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link" href="contact.html">고객센터</a>
+            <a class="nav-link" href="contact.html"  aria-haspopup="true" aria-expanded="false">
+              고객센터</a>
           </li>
         </ul>
       </div>
@@ -96,6 +96,7 @@
       </div>
     </div>
   </nav>
+
   
   <!-- Wrap -->
   <div class="wrap">
