mobile - nav-sub padding adjusting, company info

--- a/greet.html
+++ b/greet.html
@@ -97,7 +97,7 @@
 
 
   <!-- Wrap -->
-  <div class="wrap" id="greet">
+  <div class="wrap" >
     <!-- top img -->
     <div class="top-area mb-4" style="background-image: url(img/buildings-984195.jpg);">
       <div class="top-area-cover"></div>
@@ -120,7 +120,7 @@
       </div>
     
       <!-- Page Content -->
-      <div class="container">
+      <div id="greet" class="container">
         <!-- Page Heading/Breadcrumbs -->
     
         <div class="title-bar">
