mobile - nav-sub adjusting and using col-sm-auto

--- a/business1.html
+++ b/business1.html
@@ -124,7 +124,7 @@
       </div>
   
       <!-- Page Content -->
-      <div class="container" id="business">
+      <div class="container col-sm-auto" id="business">
   
         <!-- Page Heading/Breadcrumbs -->
         <div class="title-bar">
