--- a/history.html
+++ b/history.html
@@ -117,7 +117,7 @@
         </div>
       </div>  
     <!-- Page Content -->
-    <div class="container">
+    <div class=" col-sm-auto container">
       <!-- Page Heading/Breadcrumbs -->
 
       <div class="title-bar">
