--- a/greet.html
+++ b/greet.html
@@ -120,7 +120,7 @@
       </div>
     
       <!-- Page Content -->
-      <div id="greet" class="container">
+      <div id="greet" class=" col-sm-auto container">
         <!-- Page Heading/Breadcrumbs -->
     
         <div class="title-bar">
