page content - add 'col' property in all files

--- a/business3.html
+++ b/business3.html
@@ -122,7 +122,7 @@
       </div>
   
       <!-- Page Content -->
-      <div class="container">
+      <div class="container col">
   
         <!-- Page Heading/Breadcrumbs -->
         <div class="title-bar">
