--- a/history.html
+++ b/history.html
@@ -117,7 +117,7 @@
         </div>
       </div>  
     <!-- Page Content -->
-    <div class="container">
+    <div id="history" class="container col">
       <!-- Page Heading/Breadcrumbs -->
 
       <div class="title-bar">
@@ -133,7 +133,7 @@
       </div>
     
       <!-- History Content -->
-      <div id="history" class="mb-4 pb-4">
+      <div class="mb-4 pb-4">
         <div class="his-top mb-3"> 1998 ~</div>
         <div class="history-list">
           <div class="row"><span class="history-year mr-6">1998</span>
