--- a/business1.html
+++ b/business1.html
@@ -124,7 +124,7 @@
       </div>
   
       <!-- Page Content -->
-      <div class="container" id="business">
+      <div class="container col" id="business">
   
         <!-- Page Heading/Breadcrumbs -->
         <div class="title-bar">
@@ -225,7 +225,7 @@
         </h3>
         <div class="row">
           <img class="img-fluid mx-5" src="certification2/특허증 - 산소용해장치(제10-1579557호)-1.jpg" alt="" width=30%>
-          <div class="certi-name">특허 제10-1579557호 <br> 산소용해장치(VMBD) </div>
+        
         </div>
 
       </div>
