--- a/business3-1.html
+++ b/business3-1.html
@@ -123,7 +123,7 @@
       </div>
   
       <!-- Page Content -->
-      <div class="container">
+      <div class="container col">
   
         <!-- Page Heading/Breadcrumbs -->
         <div class="title-bar">
