--- a/business3-2.html
+++ b/business3-2.html
@@ -124,7 +124,7 @@
       </div>
   
       <!-- Page Content -->
-      <div class="container">
+      <div class="container col">
   
         <!-- Page Heading/Breadcrumbs -->
         <div class="title-bar">
