--- a/contact.html
+++ b/contact.html
@@ -115,7 +115,7 @@
         </div>
       </div>
       <!-- Page Content -->
-      <div class="container">
+      <div class="container col">
   
         <!-- Page Heading/Breadcrumbs -->
         <h1 id="sub-menu">상담문의</h1>
