--- a/location.html
+++ b/location.html
@@ -116,7 +116,7 @@
         </div>
       </div>  
     <!-- Page Content -->
-    <div class="container">
+    <div class="container col" >
       <!-- Page Heading/Breadcrumbs -->
 
       <div class="title-bar">
