--- a/work1-1.html
+++ b/work1-1.html
@@ -117,7 +117,7 @@
         </div>
       </div>  
     <!-- Page Content -->
-    <div class="container">
+    <div class="container col">
       <!-- Page Heading/Breadcrumbs -->
 
       <div class="title-bar">
