moblie: circle-list, bus3,4 format integrated

--- a/business3.html
+++ b/business3.html
@@ -179,7 +179,7 @@
           <h3 class="sub-tit">
           측정분석 절차
           </h3>
-          <div id="bus3">
+          <div class="process">
           <ul class="circle-list">
             <li>측정분석<br>문의 및 상담</li>
             <li>견적서 발송 및 접수</li>
