--- a/business4.html
+++ b/business4.html
@@ -161,7 +161,7 @@
         <h3 class="sub-tit">
           업무진행 절차
         </h3>
-        <div id="bus4">
+        <div class="process">
           <ul class="circle-list">
             <li>상담 및 접수</li>
             <li>현장조사</li>
