--- a/business1.html
+++ b/business1.html
@@ -224,7 +224,7 @@
           관련 특허증
         </h3>
         <div class="row">
-          <img class="img-fluid mx-5" src="certification2/특허증 - 산소용해장치(제10-1579557호)-1.jpg" alt="" width=30%>
+          <img class="img-fluid" src="certification2/특허증 - 산소용해장치(제10-1579557호)-1.jpg" alt="" width=30%>
         
         </div>
 
