mobile optimization done

--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
     <!-- Portfolio Section -->
     <h2>Business</h2>
     <h3>주흥환경이 여러분들의 맑은 세상을 책임지겠습니다.</h3>
-    <div class="portfolio mb-5 row">
+    <div class="portfolio row">
 
       <div class="col-lg col-sm-6 portfolio-item" style=" cursor: pointer;" onclick="location.href='business1.html';">
         <div class="card h-100">
