--- a/index.html
+++ b/index.html
@@ -197,6 +197,16 @@
         <source src="img/video2.mp4" type="video/mp4">
         <strong>Your browser does not support the video tag.</strong>
       </video>
+      <div class="flex-container">
+          <ul>
+            <li><a href="greet.html"><img src="img/icon1.png"><br>Company</a></li>
+            <li><a href="business1.html"><img src="img/icon2.png"><br>Business </a></li>
+            <li><a href="work1.html"><img src="img/icon3.png"><br>Work</a></li>
+            <li><a href="contact.html"><img src="img/icon4.png"><br>Ask</a></li>
+          </ul>
+
+      </div>
+    </div>
     </div>
   </div>
   </div>
