--- a/business2.html
+++ b/business2.html
@@ -60,14 +60,16 @@
               <li><a class="nav-sub-text" href="history.html">회사연혁</a></li>
               <li><a class="nav-sub-text" href="certi.html">인증현황</a></li>
               <li><a class="nav-sub-text" href="location.html">찾아오시는 길</a></li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
             </ul>
           </li>
           <li class="nav-sub0">
             <ul>
               <li><a class="nav-sub-text" href="business1.html">폐수처리설비</a></li>
-              <li><a class="nav-sub-text" href="business2.html">위탁운영관리</a></li>
-              <li><a class="nav-sub-text" href="business3.html">측정대행</a></li>
-              <li><a class="nav-sub-text" href="business4.html">환경컨설팅 및 인허가</a></li>
+              <li><a class="nav-sub-text" href="business2.html">부상분리기술</a></li>
+              <li><a class="nav-sub-text" href="business3.html">위탁운영관리</a></li>
+              <li><a class="nav-sub-text" href="business4.html">측정대행</a></li>
+              <li><a class="nav-sub-text" href="business5.html">환경컨설팅 및 인허가</a></li>
             </ul>
           </li>
           <li class="nav-sub0">
@@ -76,11 +78,13 @@
               <li><a class="nav-sub-text" href="work2.html">시운전</a></li>
               <li><a class="nav-sub-text" href="work3.html">기술개발</a></li>
               <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
             </ul>
           </li>
           <li class="nav-sub0 last">
             <ul>
               <li><a class="nav-sub-text" href="contact.html">상담문의</a></li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
               <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
               <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
               <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
