--- a/index.html
+++ b/index.html
@@ -64,14 +64,16 @@
               <li><a class="nav-sub-text" href="history.html">회사연혁</a></li>
               <li><a class="nav-sub-text" href="certi.html">인증현황</a></li>
               <li><a class="nav-sub-text" href="location.html">찾아오시는 길</a></li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
             </ul>
           </li>
           <li class="nav-sub0">
             <ul>
               <li><a class="nav-sub-text" href="business1.html">폐수처리설비</a></li>
-              <li><a class="nav-sub-text" href="business2.html">위탁운영관리</a></li>
-              <li><a class="nav-sub-text" href="business3.html">측정대행</a></li>
-              <li><a class="nav-sub-text" href="business4.html">환경컨설팅 및 인허가</a></li>
+              <li><a class="nav-sub-text" href="business2.html">부상분리기술</a></li>
+              <li><a class="nav-sub-text" href="business3.html">위탁운영관리</a></li>
+              <li><a class="nav-sub-text" href="business4.html">측정대행</a></li>
+              <li><a class="nav-sub-text" href="business5.html">환경컨설팅 및 인허가</a></li>
             </ul>
           </li>
           <li class="nav-sub0">
@@ -80,11 +82,13 @@
               <li><a class="nav-sub-text" href="work2.html">시운전</a></li>
               <li><a class="nav-sub-text" href="work3.html">기술개발</a></li>
               <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
             </ul>
           </li>
           <li class="nav-sub0 last">
             <ul>
               <li><a class="nav-sub-text" href="contact.html">상담문의</a></li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
               <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
               <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
               <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
@@ -133,7 +137,7 @@
       </div>
       <div class="portfolio row">
   
-        <div class="col-lg col-sm-6 portfolio-item" style=" cursor: pointer;" onclick="location.href='business1.html';">
+        <div class="col-6 col-lg col-sm-6 portfolio-item" style=" cursor: pointer;" onclick="location.href='business1.html';">
           <div class="card h-100">
             <div class="card-bg"></div>
             <div class="card-head">
@@ -147,7 +151,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg col-sm-6 portfolio-item" style=" cursor: pointer;" onclick="location.href='business2.html';">
+        <div class="col-6 col-lg col-sm-6 portfolio-item" style=" cursor: pointer;" onclick="location.href='business2.html';">
           <div class="card h-100">
             <div class="card-bg"></div>
             <div class="card-head">
@@ -161,7 +165,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg col-sm-6 portfolio-item" style=" cursor: pointer;" onclick="location.href='business3.html';">
+        <div class="col-6 col-lg col-sm-6 portfolio-item" style=" cursor: pointer;" onclick="location.href='business3.html';">
           <div class="card h-100">
             <div class="card-bg"></div>
             <div class="card-head">
@@ -175,7 +179,7 @@
             </div>
           </div>
         </div>
-        <div class="col-lg col-sm-6 portfolio-item" style=" cursor: pointer;" onclick="location.href='business4.html';">
+        <div class="col-6 col-lg col-sm-6 portfolio-item" style=" cursor: pointer;" onclick="location.href='business4.html';">
           <div class="card h-100">
             <div class="card-bg"></div>
             <div class="card-head">
@@ -194,16 +198,18 @@
       <!-- /.container -->
     </div>
     <div id="bottom-info">
+      <div class="top-area-cover"></div>
       <video muted autoplay loop>
         <source src="img/video2.mp4" type="video/mp4">
         <strong>Your browser does not support the video tag.</strong>
       </video>
+
       <div class="flex-container">
           <ul>
-            <li><a href="greet.html"><img src="img/icon1.png"><br>Company</a></li>
-            <li><a href="business1.html"><img src="img/icon2.png"><br>Business </a></li>
-            <li><a href="work1.html"><img src="img/icon3.png"><br>Work</a></li>
-            <li><a href="contact.html"><img src="img/icon4.png"><br>Ask</a></li>
+            <li><div style=" cursor: pointer;" onclick="location.href='greet.html';" ><img src="img/icon01.png"><br>회사연혁</a></li>
+            <li><div style=" cursor: pointer;" onclick="location.href='business5.html';"><img src="img/icon02.png"><br>환경컨설팅</a></li>
+            <li><div style=" cursor: pointer;" onclick="location.href='work3.html';"><img src="img/icon03.png"><br>개발실적</a></li>
+            <li><div style=" cursor: pointer;" onclick="location.href='contact.html';"><img src="img/icon04.png"><br>상담문의</a></li>
           </ul>
 
       </div>
