work3 content changed

--- a/work3.html
+++ b/work3.html
@@ -185,7 +185,7 @@
               <tr>
                 <td>6</td>
                 <td>KEITI</td>
-                <td>슬러지접촉분리형 아질산화-아탈질 공정을 이용한 생물학적 하폐수 고도처리 </td>
+                <td>방류수의 질산화 및 색도 제거를 위한 산소용해장치 및 오존산화장치의 베트남 현지 사업화 </td>
                 <td>2020.06 ~ 2022.02</td>
                 <td>5억원</td>
               </tr>
