video not supported message

--- a/index.html
+++ b/index.html
@@ -116,7 +116,7 @@
         <div class="carousel-item active" >
           <video muted autoplay loop>
             <source src="img/video0.mp4" type="video/mp4">
-            <strong>Your browser does not support the video tag.</strong>
+            <strong>동영상을 재생할 수 없습니다.</strong>
           </video>
           <div class="carousel-caption d-none d-md-block">
           </div>
