--- a/business1.html
+++ b/business1.html
@@ -137,7 +137,10 @@
   
         <!-- Page Heading/Breadcrumbs -->
         <div class="title-bar">
-        <h1>폐수처리설비</h1>
+        <div class="title-bar-h1"><h1>폐수처리설비</h1>
+          <span data-tooltip-text="담당자(피학원 이사): 010.2714.5840"><img src="img/icons8-info-24.png"></span> 
+        </div>
+        
 
         <ol class="breadcrumb">
           <li class="breadcrumb-item">
