--- a/business5.html
+++ b/business5.html
@@ -138,8 +138,10 @@
   
         <!-- Page Heading/Breadcrumbs -->
         <div class="title-bar">
-        <h1>위탁운영관리</h1>
-
+          <div class="title-bar-h1"><h1>위탁운영관리</h1>
+            <span data-tooltip-text="담당자(이창섭 부장): 010.2790.9991"><img src="img/icons8-info-24.png"></span> 
+          </div>
+          
         <ol class="breadcrumb">
           <li class="breadcrumb-item">
             <a href="index.html">Home</a>
