--- a/work3.html
+++ b/work3.html
@@ -58,15 +58,17 @@
               <li><a class="nav-sub-text" href="certi.html">인증현황</a></li>
               <li><a class="nav-sub-text" href="location.html">찾아오시는 길</a></li>
               <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
             </ul>
           </li>
           <li class="nav-sub0">
             <ul>
               <li><a class="nav-sub-text" href="business1.html">폐수처리설비</a></li>
               <li><a class="nav-sub-text" href="business2.html">부상분리기술</a></li>
-              <li><a class="nav-sub-text" href="business3.html">위탁운영관리</a></li>
-              <li><a class="nav-sub-text" href="business4.html">측정대행</a></li>
-              <li><a class="nav-sub-text" href="business5.html">환경컨설팅 및 인허가</a></li>
+              <li><a class="nav-sub-text" href="business6.html">오존산화기술</a></li>
+              <li><a class="nav-sub-text" href="business5.html">위탁운영관리</a></li>
+              <li><a class="nav-sub-text" href="business3.html">측정대행</a></li>
+              <li><a class="nav-sub-text" href="business4.html">환경컨설팅 및 인허가</a></li>
             </ul>
           </li>
           <li class="nav-sub0">
@@ -76,11 +78,13 @@
               <li><a class="nav-sub-text" href="work3.html">기술개발</a></li>
               <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
               <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
             </ul>
           </li>
           <li class="nav-sub0 last">
             <ul>
               <li><a class="nav-sub-text" href="contact.html">상담문의</a></li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
               <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
               <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
               <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
@@ -170,7 +174,7 @@
               </tr>
               <tr>
                 <td>4</td>
-                <td>KEITI</td>
+                <td>한국환경산업기술원 (KEITI)</td>
                 <td>가축분뇨 색도 및 유기물 제거를 위한 배오존 부상분리와 무포기 오존화시스템 실증화</td>
                 <td>2016.05 ~ 2018.12</td>
                 <td>6억 2천 7백만원</td>
@@ -184,7 +188,7 @@
               </tr>
               <tr>
                 <td>6</td>
-                <td>KEITI</td>
+                <td>한국환경산업기술원 (KEITI)</td>
                 <td>방류수의 질산화 및 색도 제거를 위한 산소용해장치 및 오존산화장치의 베트남 현지 사업화 </td>
                 <td>2020.06 ~ 2022.02</td>
                 <td>5억원</td>
