--- a/business3-2.html
+++ b/business3-2.html
@@ -137,8 +137,10 @@
   
         <!-- Page Heading/Breadcrumbs -->
         <div class="title-bar">
-        <h1>측정대행</h1>
-
+          <div class="title-bar-h1"><h1>측정대행</h1>
+            <span data-tooltip-text="담당자(최민기 이사): 010.9216.7606"><img src="img/icons8-info-24.png"></span> 
+          </div>
+          
         <ol class="breadcrumb">
           <li class="breadcrumb-item">
             <a href="index.html">Home</a>
