--- a/business4.html
+++ b/business4.html
@@ -136,8 +136,10 @@
   
         <!-- Page Heading/Breadcrumbs -->
         <div class="title-bar">
-        <h1>환경컨설팅 및 인허가</h1>
-
+          <div class="title-bar-h1"><h1>환경컨설팅 및 인허가</h1>
+            <span data-tooltip-text="담당자(최영근 이사): 010.8958.7940"><img src="img/icons8-info-24.png"></span> 
+          </div>
+          
         <ol class="breadcrumb">
           <li class="breadcrumb-item">
             <a href="index.html">Home</a>
