--- a/business6.html
+++ b/business6.html
@@ -137,8 +137,9 @@
   
         <!-- Page Heading/Breadcrumbs -->
         <div class="title-bar">
-        <h1>오존산화기술(O3-OX)</h1>
-
+          <div class="title-bar-h1"><h1>오존산화기술</h1>
+            <span data-tooltip-text="담당자(최영근 이사): 010.8958.7940"><img src="img/icons8-info-24.png"></span> 
+          </div>
         <ol class="breadcrumb">
           <li class="breadcrumb-item">
             <a href="index.html">Home</a>
