--- a/index.html
+++ b/index.html
@@ -65,12 +65,14 @@
               <li><a class="nav-sub-text" href="certi.html">인증현황</a></li>
               <li><a class="nav-sub-text" href="location.html">찾아오시는 길</a></li>
               <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
             </ul>
           </li>
           <li class="nav-sub0">
             <ul>
               <li><a class="nav-sub-text" href="business1.html">폐수처리설비</a></li>
               <li><a class="nav-sub-text" href="business2.html">부상분리기술</a></li>
+              <li><a class="nav-sub-text" href="business6.html">오존산화기술</a></li>
               <li><a class="nav-sub-text" href="business5.html">위탁운영관리</a></li>
               <li><a class="nav-sub-text" href="business3.html">측정대행</a></li>
               <li><a class="nav-sub-text" href="business4.html">환경컨설팅 및 인허가</a></li>
@@ -83,11 +85,13 @@
               <li><a class="nav-sub-text" href="work3.html">기술개발</a></li>
               <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
               <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
             </ul>
           </li>
           <li class="nav-sub0 last">
             <ul>
               <li><a class="nav-sub-text" href="contact.html">상담문의</a></li>
+              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
               <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
               <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
               <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
@@ -116,7 +120,7 @@
         <div class="carousel-item active" >
           <video muted autoplay loop>
             <source src="img/video0.mp4" type="video/mp4">
-            <strong>동영상을 재생할 수 없습니다.</strong>
+            <strong>Your browser does not support the video tag.</strong>
           </video>
           <div class="carousel-caption d-none d-md-block">
           </div>
