customer menu title

--- a/contact.html
+++ b/contact.html
@@ -126,15 +126,17 @@
       <div class="container col">
   
         <!-- Page Heading/Breadcrumbs -->
-        <h1 id="sub-menu">상담문의</h1>
-  
-        <ol class="breadcrumb">
-          <li class="breadcrumb-item">
-            <a href="index.html">Home</a>
-          </li>
-          <li class="breadcrumb-item"><a href="contact.html">고객센터</a></li>
-          <li class="breadcrumb-item"><a href="contact.html">상담문의</a></li>
-        </ol>
+        <div class="title-bar">
+          <div class="title-bar-h1"><h1>상담문의</h1></div>
+
+          <ol class="breadcrumb">
+            <li class="breadcrumb-item">
+              <a href="index.html">Home</a>
+            </li>
+            <li class="breadcrumb-item"><a href="./contact.html">고객센터</a></li>
+            <li class="breadcrumb-item"><a href="./contact.html">상담문의</a></li>
+          </ol>
+        </div>
   
        <!-- Contact Form -->
     <!-- In order to set the email address and subject line for the contact form go to the bin/contact_me.php file. -->
