tech-data.html is added to all navbar

--- a/greet.html
+++ b/greet.html
@@ -85,7 +85,7 @@
           <li class="nav-sub0 last">
             <ul>
               <li><a class="nav-sub-text" href="contact.html">상담문의</a></li>
-              <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
+              <li><a class="nav-sub-text" href="tech-data.php">기술자료</a></li>
               <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
               <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
               <li><a class="nav-sub-text" href=""></a>&nbsp;</li>
