side bar changed:

--- a/contact.html
+++ b/contact.html
@@ -118,7 +118,8 @@
       <div class="col-lg-2 mb-4">
         <a href="contact.html" class="side-menu text-center">고객센터</a>
         <div class="list-group">
-          <a href="contact.html" class="list-group-item">상담문의</a>
+          <a href="contact.html" class="list-group-item"><strong>상담문의</strong></a>
+          <a href="contact.html" class="list-group-item">기술자료</a>
 
         </div>
       </div>
