--- a/business1-2.html
+++ b/business1-2.html
@@ -198,7 +198,12 @@
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+  <script type="text/javascript">
+    var img = document.getElementsByTagName("img");
+        for (var x = 0; x < img.length; x++) {
+          img.item(x).onclick=function() {window.open(this.src)}; 
+        }
+  </script>
   <script src="js/nav.js"></script>
 </body>
 
