--- a/business2.html
+++ b/business2.html
@@ -170,10 +170,10 @@
           <div class="carousel-inner" role="listbox">
             <!-- Slide One - Set the background image for this slide in the line below -->
             <div class="carousel-item active" >
-              <img class="img-fluid " src="img/DAF-P1.JPG" alt="" width=100%>
+              <img class="img-fluid " src="img/DAF-P1.jpg" alt="" width=100%>
             </div>
             <div class="carousel-item" >
-              <img class="img-fluid " src="img/DAF-P2.JPG" alt="" width=100%>
+              <img class="img-fluid " src="img/DAF-P2.jpg" alt="" width=100%>
             </div>
           </div>
         </div>
@@ -188,7 +188,7 @@
             </div>
             <div class="carousel-item" >
               <video muted autoplay loop width=100%>
-                <source src="img/DAF-2.MOV" type="video/mp4">
+                <source src="img/DAF-2.mp4" type="video/mp4">
                 <strong>동영상을 재생할 수 없습니다.</strong>
               </video>
             </div>
@@ -236,7 +236,13 @@
   <!-- Bootstrap core JavaScript -->
   <script src="vendor/jquery/jquery.min.js"></script>
   <script src="vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
-
+  <script type="text/javascript">
+    var img = document.getElementsByTagName("img");
+        for (var x = 0; x < img.length; x++) {
+          img.item(x).onclick=function() {window.open(this.src)}; 
+        }
+  </script>
+  
   <script src="js/nav.js"></script>
 </body>
 
