--- a/business6.html
+++ b/business6.html
@@ -158,7 +158,7 @@
         <h3 class="sub-tit">
           오존산화기술(O3-OX) 공정도
         </h3>
-        <img class="img-fluid img-border" src="img/오존산화기술 공정도.jpg" width=80%>
+        <img class="img-border" src="img/오존산화기술 공정도.jpg" width=80%>
         <div class="subtits row">
             <div class="w-47 px-3">
             <h3 class="sub-tit">
